# serializer version: 1
# name: test_switch_entities[switch.garage_outlet-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.garage_outlet',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_BB BB BB 1',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.garage_outlet-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Garage Outlet',
    }),
    'context': <ANY>,
    'entity_id': 'switch.garage_outlet',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_entities[switch.living_room_scene-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.living_room_scene',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:google-circles-communities',
    'original_name': 'Living Room Scene',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_55090',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.living_room_scene-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Living Room Scene',
      'group_all_on': False,
      'icon': 'mdi:google-circles-communities',
    }),
    'context': <ANY>,
    'entity_id': 'switch.living_room_scene',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_entities[switch.movie_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.movie_mode',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:script-text-outline',
    'original_name': 'Movie Mode',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_0001',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.movie_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'actions_enabled': True,
      'actions_last_finish': None,
      'actions_last_run': None,
      'actions_next_scheduled_run': None,
      'friendly_name': 'Movie Mode',
      'icon': 'mdi:script-text-outline',
      'run_at_startup': None,
      'running': None,
      'status_enabled': True,
      'status_last_finish': None,
      'status_last_run': None,
      'status_next_scheduled_run': None,
    }),
    'context': <ANY>,
    'entity_id': 'switch.movie_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
